# Regulagem-plantadeira

./: .gitignore  README.md  noname.cpp  noname.h  xrcDesign_1.fbp
assets/: xrcDesign2.xrc
calculadora_plantio/: calculadora_plantio.sln
calculadora_plantio/calculadora_plantio/: .gitignore  CMakeLists.txt  Resource.h  calculadora_plantio.cpp  calculadora_plantio.cpp.bak  calculadora_plantio.rc  calculadora_plantio.vcxproj  calculadora_plantio.vcxproj.filters  framemain_base.cpp  framemain_base.hpp  regulagem.cpp  regulagem.hpp  tools.cpp  tools.hpp
calculadora_plantio/calculadora_plantio/assets/: design.xrc
calculadora_plantio/calculadora_plantio/mainframe_base/: CMakeLists.txt  mainframe_base.cpp  mainframe_base.hpp
calculadora_plantio/calculadora_plantio/regulagem/: CMakeLists.txt  regulagem.cpp
cgi-bin/: index.html
cgi-bin/api/: main.cpp  regulagem.hpp
java/: ClosingFrame.java  Main.java  Makefile  Regulagem.java  Window.java
